# emscripten_cmake_make_minimal

./: .gitignore  CMakeLists.txt  README.md
build.emscripten/: client.wasm  index.html
src/: Application.cpp  calculator.cpp
src/includes/: calculator.h
